common/istio/kubeflow-istio-resources/base/kf-istio-resources.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
      - "<changeme-default-domain>"
      - "*.<changeme-default-user-namespace>.<changeme-default-domain>"
    tls:
      mode: SIMPLE
      credentialName: kubeflow-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow-https-redirect
spec:
  hosts:
    - "<changeme-default-domain>"
    - "*.<changeme-default-user-namespace>.<changeme-default-domain>"
  gateways:
    - kubeflow-gateway
  http:
    - match:
        - port: 80
      redirect:
        uri: "/"
        scheme: "https"
        redirectCode: 301
